# clippy-revival

./: .env.example  .eslintrc.json  .gitignore  .prettierrc  ALL_FEATURES_GUIDE.md  BUILD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  LICENSE  PHASES_1-6_COMPLETION.md  PHASE_1_2_3_COMPLETION_REPORT.md  PHASE_4_FINAL_REPORT.md  PLUGIN_DEVELOPMENT.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  jest.config.js  package-lock.json  package.json  playwright.config.js  pyproject.toml  webpack.renderer.config.js
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
backend/: app.py  app.spec  config.py  pytest.ini  requirements-dev.txt  requirements.txt
docs/: ACCESSIBILITY_GUIDE.md  ADVANCED_FEATURES_GUIDE.md  API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  ICONS_GUIDE.md  PERFORMANCE_GUIDE.md  PRIORITY_10_COMPLETED.md  PRIORITY_1_COMPLETED.md  PRIORITY_2_COMPLETED.md  PRIORITY_3_COMPLETED.md  PRIORITY_4_COMPLETED.md  PRIORITY_5_COMPLETED.md  PRIORITY_6_COMPLETED.md  PRIORITY_7_COMPLETED.md  PRIORITY_8_COMPLETED.md  PRIORITY_9_COMPLETED.md  PRODUCTION_OPERATIONS_GUIDE.md  PRODUCTION_RELEASE_CHECKLIST.md  PROJECT_SUMMARY.md  README.md  SECURITY_GUIDE.md  TESTING_GUIDE.md  TYPESCRIPT_MIGRATION_GUIDE.md
electron/: logger.js  main.js  preload.js
examples/: example-plugin.js  example-themes.json
plugins/: README.md  plugin-schema.json
scripts/: analyze-bundle.js  build-backend.ps1  package.ps1  security-audit.ps1  security-check.sh  validate-milestone.ps1
src/: App.js  config.js  (+2 more)
(+121 files in other folders)
